--- a/html/demo.html
+++ b/html/demo.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>show comments demo</title>
+    <link rel="stylesheet" href="../css/demo.css">
   </head>
   <body>
     <div class="comments">
