--- a/html/demo.html
+++ b/html/demo.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>show comments demo</title>
     <link rel="stylesheet" href="../css/demo.css">
+    <script type="text/javascript" src="../ShowComments/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="../ShowComments/ShowComment.js"></script>
   </head>
   <body>
     <div class="comments">
@@ -17,5 +19,10 @@
         <span>评论三</span>
       </div>
     </div>
+    <script type="text/javascript">
+      $(function(){
+        $(".comments").ShowComment();
+      });
+    </script>
   </body>
 </html>
