show comments js v1.2

--- a/html/demo.html
+++ b/html/demo.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <div class="comments">
-      <div class="comments-item">
+      <div class="commentsItem">
         <span>评论一</span>
       </div>
-      <div class="comments-item">
+      <div class="commentsItem">
         <span>评论二</span>
       </div>
-      <div class="comments-item">
+      <div class="commentsItem">
         <span>评论三</span>
       </div>
     </div>
