show comments js.

--- a/html/demo.html
+++ b/html/demo.html
@@ -10,13 +10,16 @@
   <body>
     <div class="comments">
       <div class="commentsItem">
-        <span>评论一</span>
+        <img src="../imgs/head1.jpg" />
+        <p>这是一条长的评论，这是一条长的评论。</p>
       </div>
       <div class="commentsItem">
-        <span>评论二</span>
+        <img src="../imgs/head2.jpg" />
+        <p>评论二</p>
       </div>
       <div class="commentsItem">
-        <span>评论三</span>
+        <img src="../imgs/head3.jpg" />
+        <p>评论三</p>
       </div>
     </div>
     <script type="text/javascript">
